feat:photoview在viewpaper换页后能重新加载

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,15 +7,11 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <com.example.photoapp.widght.PhotoViewPaper
+    <androidx.viewpager.widget.ViewPager
         android:id="@+id/vp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
-    <com.example.photoapp.widght.PhotoImageView
-        android:id="@+id/iv1"
-        android:layout_width="match_parent"
-        android:layout_height="500dp" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_photo"
