--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -3,6 +3,10 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
+    <com.example.widght.NumberCheckBox
+        android:layout_width="30dp"
+        android:layout_height="30dp" />
+
     <ImageView
         android:id="@+id/iv_rv_item"
         android:layout_width="150dp"
