feat(com.example.pikachu):图片加载框架可以加载图片了

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,10 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".MainActivity">
-
+<ImageView
+    android:id="@+id/im"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"/>
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/vp"
         android:layout_width="match_parent"
