--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
-    <com.example.widght.NumberCheckBox
-        android:layout_width="30dp"
-        android:layout_height="30dp" />
+
 
     <ImageView
         android:id="@+id/iv_rv_item"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_margin="8dp" />
-</LinearLayout>
+
+    <com.example.widght.NumberCheckBox
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="10dp"/>
+</RelativeLayout>
