--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
-
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
     <ImageView
         android:id="@+id/iv_rv_item"
         android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_height="100dp"
         android:layout_margin="8dp" />
 
     <com.example.widght.NumberCheckBox
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_marginTop="10dp"/>
+        app:strokeColor="@color/white"
+        android:layout_marginTop="6dp"
+        android:layout_marginStart="8dp"/>
 </RelativeLayout>
