--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -12,6 +12,7 @@
         android:layout_margin="8dp" />
 
     <com.example.widght.NumberCheckBox
+        android:id="@+id/nb_rv_item"
         android:layout_width="40dp"
         android:layout_height="40dp"
         app:strokeColor="@color/white"
