--- a/app/src/main/res/layout/activity_photo.xml
+++ b/app/src/main/res/layout/activity_photo.xml
@@ -7,6 +7,7 @@
     tools:context=".photoActivity">
 <androidx.viewpager.widget.ViewPager
     android:id="@+id/vp_photo"
+    android:background="@color/gery"
     android:layout_width="match_parent"
     android:layout_height="match_parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
