--- a/app/src/main/res/layout/activity_photo.xml
+++ b/app/src/main/res/layout/activity_photo.xml
@@ -5,9 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".PhotoActivity">
-<androidx.viewpager.widget.ViewPager
-    android:id="@+id/vp_photo"
-    android:background="@color/gery"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"/>
+
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/vp_photo"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/gery" />
 </androidx.constraintlayout.widget.ConstraintLayout>
