--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="wrap_content">
 
 
     <ImageView
@@ -15,7 +15,7 @@
         android:id="@+id/nb_rv_item"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        app:strokeColor="@color/white"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="6dp"
-        android:layout_marginStart="8dp"/>
+        app:strokeColor="@color/white" />
 </RelativeLayout>
